kustomize/overlays/prod/02-deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-frontend
  labels:
    app: k8s-frontend
spec:
  replicas: 10
  selector:
    matchLabels:
      app: k8s-frontend
  template:
    spec:
      containers:
      - name: k8s-frontend
        image: phiroict/k8s-test-frontend@sha256:8d924ecca56e03b5225b5430f627ad5d8454606988a8f08af9c4d9e71e96604c
